# Spark

./: .gitignore  INSTALLATION.md  README.md  main.py  pyproject.toml  requirements.txt
gitaut/: __init__.py  branch_namer.py  change_analyzer.py  change_classifier.py  cli.py  commit_generator.py  description_builder.py  git_operations.py  orchestrator.py  pre_commit_hooks.py
gitaut/config/: default_config.yaml
src/: __init__.py  branch_namer.py  change_analyzer.py  config_loader.py  dependency_installer.py  error_handler.py  git_operations.py  github_client.py  input_validator.py  logger.py  orchestrator.py  test_change.py
